--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ asammdf = "^7.3.2"
 quarto = "^0.1.0"
 scipy = "^1.10.1"
 plotly = "^5.13.1"
+streamlit = "^1.20.0"
+streamlit-option-menu = "^0.3.2"
+nbformat = "^5.8.0"
 
 
 [build-system]
